--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/matinkaboli/dumont-contract-v1/issues"
   },
-  "homepage": "https://github.com/matinkaboli/dumont-contract-v1#readme"
+  "homepage": "https://github.com/matinkaboli/dumont-contract-v1#readme",
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.0.2",
+    "@prb/math": "^4.0.2"
+  }
 }
