--- a/remappings.json
+++ b/remappings.json
@@ -1,5 +1,6 @@
 {
   "remappings": [
+    "@openzeppelin/contracts-upgradeable/=node_modules/@openzeppelin/contracts-upgradeable",
     "@openzeppelin/contracts/=node_modules/@openzeppelin/contracts/",
     "@prb/math/=node_modules/@prb/math/"
   ]
